# zj-hud

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
docs/specs/: reverse-eng-spec.md
docs/superpowers/plans/: 2026-05-26-zj-hud-implementation.md  2026-05-26-zj-statusbar-implementation.md
docs/superpowers/specs/: 2026-05-26-zj-hud-design.md  2026-05-26-zj-statusbar-design.md
src/: config.rs  icons.rs  layout.rs  main.rs  render.rs  search.rs  segments.rs  shared_state.rs  state.rs  system.rs  tabs.rs
src/bar/: click_map.rs  config.rs  mod.rs  render.rs  state.rs
src/bar/status/: mod.rs  system.rs
src/bar/tabs/: layout.rs  mod.rs  truncation.rs
src/rename/: mod.rs
src/search/: mod.rs
src/shared/: alarms.rs  color.rs  geometry.rs  icons.rs  kdl.rs  mod.rs  state.rs
src/whichkey/: config.rs  footer.rs  grid.rs  labels.rs  mod.rs  modes.rs  render.rs  tab_lookup.rs  theme.rs
whichkey-proto/: Cargo.toml
whichkey-proto/src/: main.rs
